--- a/src/faq.html
+++ b/src/faq.html
@@ -13,9 +13,9 @@
 
     <main>
 
-        <!-- contacts -->
-        //= html/page/error404.html
-        <!-- end contacts -->
+        <!-- faq -->
+        //= html/page/faq.html
+        <!-- end faq -->
 
     </main>
 
