--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -76,3 +76,11 @@
 
     </div>
 </footer>
+
+<!-- <link rel="stylesheet" href="css/glightbox.min.css">
+<link rel="stylesheet" href="css/swiper-bundle.min.css">
+<script src="js/glightbox.min.js"></script>
+<script src="js/swiper-bundle.min.js"></script> -->
+<!-- <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script> -->
+<script src="js/scrollreveal.min.js"></script>
+<script src="js/main.js?v=1"></script>
