--- a/src/ui-kit.html
+++ b/src/ui-kit.html
@@ -15,13 +15,7 @@
 
         <section style="min-height: 100vh; padding: 50px 0;">
             <div class="container">
-                <ul>
-                    <li><a href="contacts.html">Контакты</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
-                    <li><a href="error404.html">404</a></li>
-                    <li><a href="privacy.html">Политика конфиденциальности</a></li>
-                    <li><a href="ui-kit.html">UI KIT</a></li>
-                </ul>
+                <a href="#" class="btn">Кнопка</a>
             </div>
         </section>
 
