--- a/contacts.html
+++ b/contacts.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-
+<!-- head -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Контакты</title>
+    <title>Интерактивный мемориал</title>
     <meta name="description" content="Интерактивный мемориал">
     <!-- <meta property="og:title" content="Интерактивный мемориал" />
-    <meta property="og:description" content="Интерактивный мемориал" />
-    <meta property="og:image" content="img/og-img.jpg" /> -->
+	<meta property="og:description" content="Интерактивный мемориал" />
+	<meta property="og:image" content="img/og-img.jpg" /> -->
 
     <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
 
-
-
     <link rel="stylesheet" href="css/styles.css?v=1">
 </head>
+<!-- end head -->
 
 <body>
 
@@ -190,16 +189,15 @@
     
         </div>
     </footer>
-    <!-- end footer -->
-
-
-
+    
     <!-- <link rel="stylesheet" href="css/glightbox.min.css">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <script src="js/glightbox.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script> -->
-    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script>
+    <!-- <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script> -->
+    <script src="js/scrollreveal.min.js"></script>
     <script src="js/main.js?v=1"></script>
+    <!-- end footer -->
 
 </body>
 
