--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -18,9 +18,9 @@
                     <div class="footer__box footer__box--menu">
                         <h2>Меню</h2>
                         <ul class="footer__menu">
-                            <li><a href="#">Пример QR</a></li>
-                            <li><a href="#">Цена</a></li>
-                            <li><a href="#">Вопрос / Ответ</a></li>
+                            <li><a href="sample.html">Пример QR</a></li>
+                            <li><a href="price.html">Цена</a></li>
+                            <li><a href="faq.html">Вопрос / Ответ</a></li>
                             <li><a href="contacts.html">Контакты</a></li>
                         </ul>
                     </div>
@@ -77,10 +77,16 @@
     </div>
 </footer>
 
-<!-- <link rel="stylesheet" href="css/glightbox.min.css">
-<link rel="stylesheet" href="css/swiper-bundle.min.css">
-<script src="js/glightbox.min.js"></script>
-<script src="js/swiper-bundle.min.js"></script> -->
-<!-- <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script> -->
+<!-- popup -->
+//= popup.html
+<!-- end popup -->
+
+
+
+<!--<link rel="stylesheet" href="css/swiper-bundle.min.css">
+	<script src="js/swiper-bundle.min.js"></script> -->
 <script src="js/scrollreveal.min.js"></script>
-<script src="js/main.js?v=1"></script>
+<link rel="stylesheet" href="css/glightbox.min.css">
+<script src="js/glightbox.min.js"></script>
+<script src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script>
+<script src="js/main.js?v=2"></script>
