--- a/src/html/head.html
+++ b/src/html/head.html
@@ -7,7 +7,7 @@
 	<meta property="og:description" content="Интерактивный мемориал" />
 	<meta property="og:image" content="img/og-img.jpg" /> -->
 
-    <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <link rel="stylesheet" href="css/styles.css?v=1">
 </head>
