--- a/src/html/header.html
+++ b/src/html/header.html
@@ -7,9 +7,9 @@
             </a>
 
             <ul class="header__menu">
-                <li><a href="#">Пример QR</a></li>
-                <li><a href="#">Цена</a></li>
-                <li><a href="#">Вопрос / Ответ</a></li>
+                <li><a href="sample.html">Пример QR</a></li>
+                <li><a href="price.html">Цена</a></li>
+                <li><a href="faq.html">Вопрос / Ответ</a></li>
                 <li class="current-menu-item"><a href="contacts.html">Контакты</a></li>
             </ul>
 
@@ -21,7 +21,7 @@
                 <a class="header__tel" href="tel:+79377200581">+7 (937) 720-05-81</a>
             </div>
 
-            <div class="header__burger">Меню</div>
+            <div class="header__burger"><span></span></div>
         </div>
     </div>
 </header>
