--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 //= html/head.html
 <!-- end head -->
 
-<body class="home">
+<body>
 
     <!-- header -->
     //= html/header.html
@@ -13,14 +13,18 @@
 
     <main>
 
-        <section style="min-height: 100vh; padding: 50px 0;">
+        <section style="min-height: 100vh; padding: 50px 0; font-size: 20px;">
             <div class="container">
                 <ul>
+                    <li><a href="home.html">Главная</a></li>
+                    <li><a href="sample-base.html">Пример базовый</a></li>
+                    <li><a href="sample-premium.html">Пример премиум</a></li>
                     <li><a href="contacts.html">Контакты</a></li>
                     <li><a href="faq.html">FAQ</a></li>
+                    <li><a href="price.html">Цена</a></li>
                     <li><a href="error404.html">404</a></li>
                     <li><a href="privacy.html">Политика конфиденциальности</a></li>
-                    <li><a href="ui-kit.html">UI KIT</a></li>
+                    <!-- <li><a href="ui-kit.html">UI KIT</a></li> -->
                 </ul>
             </div>
         </section>
