--- a/src/html/header.html
+++ b/src/html/header.html
@@ -7,7 +7,7 @@
             </a>
 
             <ul class="header__menu">
-                <li><a href="sample.html">Пример QR</a></li>
+                <li><a href="sample-premium.html">Пример&nbsp;QR</a></li>
                 <li><a href="price.html">Цена</a></li>
                 <li><a href="faq.html">Вопрос / Ответ</a></li>
                 <li class="current-menu-item"><a href="contacts.html">Контакты</a></li>
