--- a/src/html/home/hero.html
+++ b/src/html/home/hero.html
@@ -11,7 +11,7 @@
                 <p class="hero__info">Сохраните память о родных и любимых, пронесите ее сквозь года и передайте следующим поколениям</p>
                 <div class="hero__btns">
                     <a href="#request-full" class="btn popup" data-glightbox="width: 740; height: auto;">Заказать страницу</a>
-                    <a href="sample.html" class="btn btn-o">Смотреть пример</a>
+                    <a href="sample-premium.html" class="btn btn-o">Смотреть пример</a>
                 </div>
             </div>
         </div>
