--- a/src/html/home/ssample.html
+++ b/src/html/home/ssample.html
@@ -5,7 +5,7 @@
             <img src="img/ssample-pic.jpg" alt="Пример страницы памяти" width="1280" height="655">
         </div>
         <div class="ssample__btns">
-            <a href="sample.html" class="btn btn-c">Смотреть страницу</a>
+            <a href="sample-premium.html" class="btn btn-c">Смотреть страницу</a>
         </div>
     </div>
 </section>
