--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
                 </a>
     
                 <ul class="header__menu">
-                    <li><a href="sample.html">Пример QR</a></li>
+                    <li><a href="sample-premium.html">Пример&nbsp;QR</a></li>
                     <li><a href="price.html">Цена</a></li>
                     <li><a href="faq.html">Вопрос / Ответ</a></li>
                     <li class="current-menu-item"><a href="contacts.html">Контакты</a></li>
@@ -65,7 +65,7 @@
                         <p class="hero__info">Сохраните память о родных и любимых, пронесите ее сквозь года и передайте следующим поколениям</p>
                         <div class="hero__btns">
                             <a href="#request-full" class="btn popup" data-glightbox="width: 740; height: auto;">Заказать страницу</a>
-                            <a href="sample.html" class="btn btn-o">Смотреть пример</a>
+                            <a href="sample-premium.html" class="btn btn-o">Смотреть пример</a>
                         </div>
                     </div>
                 </div>
@@ -247,7 +247,7 @@
                     <img src="img/ssample-pic.jpg" alt="Пример страницы памяти" width="1280" height="655">
                 </div>
                 <div class="ssample__btns">
-                    <a href="sample.html" class="btn btn-c">Смотреть страницу</a>
+                    <a href="sample-premium.html" class="btn btn-c">Смотреть страницу</a>
                 </div>
             </div>
         </section>
@@ -442,7 +442,7 @@
                         <div class="footer__box footer__box--menu">
                             <h2>Меню</h2>
                             <ul class="footer__menu">
-                                <li><a href="sample.html">Пример QR</a></li>
+                                <li><a href="sample-premium.html">Пример QR</a></li>
                                 <li><a href="price.html">Цена</a></li>
                                 <li><a href="faq.html">Вопрос / Ответ</a></li>
                                 <li><a href="contacts.html">Контакты</a></li>
