--- a/ui-kit.html
+++ b/ui-kit.html
@@ -29,7 +29,7 @@
                 </a>
     
                 <ul class="header__menu">
-                    <li><a href="sample.html">Пример QR</a></li>
+                    <li><a href="sample-premium.html">Пример&nbsp;QR</a></li>
                     <li><a href="price.html">Цена</a></li>
                     <li><a href="faq.html">Вопрос / Ответ</a></li>
                     <li class="current-menu-item"><a href="contacts.html">Контакты</a></li>
@@ -80,7 +80,7 @@
                         <div class="footer__box footer__box--menu">
                             <h2>Меню</h2>
                             <ul class="footer__menu">
-                                <li><a href="sample.html">Пример QR</a></li>
+                                <li><a href="sample-premium.html">Пример QR</a></li>
                                 <li><a href="price.html">Цена</a></li>
                                 <li><a href="faq.html">Вопрос / Ответ</a></li>
                                 <li><a href="contacts.html">Контакты</a></li>
