--- a/src/home.html
+++ b/src/home.html
@@ -21,7 +21,13 @@
         //= html/home/aim.html
         <!-- end aim -->
 
+        <!-- present -->
+        //= html/home/present.html
+        <!-- end present -->
 
+        <!-- banner-top -->
+        //= html/home/banner-top.html
+        <!-- end banner-top -->
 
         <!-- advantages -->
         //= html/home/advantages.html
@@ -38,6 +44,10 @@
         <!-- steps -->
         //= html/home/steps.html
         <!-- end steps -->
+
+        <!-- banner-bottom -->
+        //= html/home/banner-bottom.html
+        <!-- end banner-bottom -->
 
         <!-- faq -->
         //= html/home/faq.html
