--- a/src/html/home/advantages.html
+++ b/src/html/home/advantages.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="advantages__text">
                     <h3 class="advantages__header">Простота и удобство заказа</h3>
-                    <p class="advantages__descr">Просто <a href="#request-full" class="popup">оставьте заявку</a> на создание <br> страницы памяти</p>
+                    <p class="advantages__descr">Просто <a data-micromodal-trigger="modal-request" href="javascript:;">оставьте заявку</a> на создание <br> страницы памяти</p>
                 </div>
             </li>
 
