--- a/src/html/home/present.html
+++ b/src/html/home/present.html
@@ -1,6 +1,6 @@
 <section class="present">
     <div class="container">
-        <!-- <h2 class="section__title present___title">Что можно <br> сохранить в <br> <span>интерактивном <br> мемориале</span></h2> -->
+        <h2 class="section__title present__title">Что можно <br> сохранить в <br> <span>интерактивном <br> мемориале</span></h2>
         <div class="present__container">
             <div class="present__text">
                 <ul class="present__list">
@@ -77,27 +77,27 @@
                 <ul class="present__pics">
                     <li class="present__pic active">
                         <div class="present__curtain"></div>
-                        <img src="img/present-0.jpg" alt="" width="700" height="700">
+                        <img src="img/present-0.png" alt="" width="700" height="700">
                     </li>
                     <li class="present__pic">
                         <div class="present__curtain"></div>
-                        <img src="img/present-1.jpg" alt="" width="700" height="700">
+                        <img src="img/present-1.png" alt="" width="700" height="700">
                     </li>
                     <li class="present__pic">
                         <div class="present__curtain"></div>
-                        <img src="img/present-2.jpg" alt="" width="700" height="700">
+                        <img src="img/present-2.png" alt="" width="700" height="700">
                     </li>
                     <li class="present__pic">
                         <div class="present__curtain"></div>
-                        <img src="img/present-3.jpg" alt="" width="700" height="700">
+                        <img src="img/present-3.png" alt="" width="700" height="700">
                     </li>
                     <li class="present__pic">
                         <div class="present__curtain"></div>
-                        <img src="img/present-4.jpg" alt="" width="700" height="700">
+                        <img src="img/present-4.png" alt="" width="700" height="700">
                     </li>
                     <li class="present__pic">
                         <div class="present__curtain"></div>
-                        <img src="img/present-5.jpg" alt="" width="700" height="700">
+                        <img src="img/present-5.png" alt="" width="700" height="700">
                     </li>
                 </ul>
             </div>
