--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 
         <section style="min-height: 100vh; padding: 50px 0; font-size: 20px;">
             <div class="container">
-                <ul>
+                <ul class="sticky">
                     <li><a href="home.html">Главная</a></li>
                     <li><a href="sample-base.html">Пример базовый</a></li>
                     <li><a href="sample-premium.html">Пример премиум</a></li>
