--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -77,16 +77,19 @@
     </div>
 </footer>
 
-<!-- popup -->
-//= popup.html
-<!-- end popup -->
+<!-- modal -->
+//= modal.html
+<!-- end modal -->
 
 
 
 <!--<link rel="stylesheet" href="css/swiper-bundle.min.css">
 	<script src="js/swiper-bundle.min.js"></script> -->
 <script src="js/scrollreveal.min.js"></script>
-<link rel="stylesheet" href="css/glightbox.min.css">
-<script src="js/glightbox.min.js"></script>
+<!-- <link rel="stylesheet" href="css/glightbox.min.css">
+<script src="js/glightbox.min.js"></script> -->
+
+<script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
 <script src="js/main.js?v=2"></script>
