--- a/src/html/header.html
+++ b/src/html/header.html
@@ -6,12 +6,34 @@
                 <span>Интерактивный мемориал</span>
             </a>
 
-            <ul class="header__menu">
-                <li><a href="sample-premium.html">Пример&nbsp;QR</a></li>
-                <li><a href="price.html">Цена</a></li>
-                <li><a href="faq.html">Вопрос / Ответ</a></li>
-                <li class="current-menu-item"><a href="contacts.html">Контакты</a></li>
-            </ul>
+            <div class="header__menu">
+                <ul class="header__menu-nav">
+                    <li><a href="sample-premium.html">Пример&nbsp;QR</a></li>
+                    <li><a href="price.html">Цена</a></li>
+                    <li><a href="faq.html">Вопрос / Ответ</a></li>
+                    <li class="current-menu-item"><a href="contacts.html">Контакты</a></li>
+                </ul>
+                <div class="header__mob">
+                    <div class="header__mob-cont">
+                        <a href="tel:+79377200581">+7 (937) 720-05-81</a>
+                        <a href="mailto:Romik3616@yandex.ru">Romik3616@yandex.ru</a>
+                    </div>
+                    <div class="header__mob-req">
+                        <ul>
+                            <li>
+                                <span>Наименование банка:</span> Тинькофф банк
+                            </li>
+                            <li>
+                                <span>Номер карты:</span> 5536 9138 8422 6636
+                            </li>
+                            <li>
+                                <span>Получатель:</span> Роман Лупов
+                            </li>
+                        </ul>
+                        <p>(При оплате укажите в комментарии номер Вашего телефона)</p>
+                    </div>
+                </div>
+            </div>
 
             <div class="header__contacts">
                 <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
