--- a/src/html/home/advantages.html
+++ b/src/html/home/advantages.html
@@ -4,7 +4,7 @@
 
         <ul class="advantages__list">
 
-            <li class="advantages__item">
+            <li class="advantages__item title-animation-idle">
                 <div class="advantages__pic">
                     <img src="img/advantage-1.svg" alt="" width="60" height="60">
                 </div>
@@ -14,7 +14,7 @@
                 </div>
             </li>
 
-            <li class="advantages__item">
+            <li class="advantages__item title-animation-idle">
                 <div class="advantages__pic">
                     <img src="img/advantage-2.svg" alt="" width="60" height="60">
                 </div>
@@ -24,7 +24,7 @@
                 </div>
             </li>
 
-            <li class="advantages__item">
+            <li class="advantages__item title-animation-idle">
                 <div class="advantages__pic">
                     <img src="img/advantage-3.svg" alt="" width="60" height="60">
                 </div>
@@ -34,7 +34,7 @@
                 </div>
             </li>
 
-            <li class="advantages__item">
+            <li class="advantages__item title-animation-idle">
                 <div class="advantages__pic">
                     <img src="img/advantage-4.svg" alt="" width="60" height="60">
                 </div>
@@ -44,7 +44,7 @@
                 </div>
             </li>
 
-            <li class="advantages__item">
+            <li class="advantages__item title-animation-idle">
                 <div class="advantages__pic">
                     <img src="img/advantage-5.svg" alt="" width="60" height="60">
                 </div>
@@ -54,7 +54,7 @@
                 </div>
             </li>
 
-            <li class="advantages__item">
+            <li class="advantages__item title-animation-idle">
                 <div class="advantages__pic">
                     <img src="img/advantage-6.svg" alt="" width="60" height="60">
                 </div>
@@ -64,7 +64,7 @@
                 </div>
             </li>
 
-            <li class="advantages__item">
+            <li class="advantages__item title-animation-idle">
                 <div class="advantages__pic">
                     <img src="img/advantage-7.svg" alt="" width="60" height="60">
                 </div>
@@ -74,7 +74,7 @@
                 </div>
             </li>
 
-            <li class="advantages__item">
+            <li class="advantages__item title-animation-idle">
                 <div class="advantages__pic">
                     <img src="img/advantage-8.svg" alt="" width="60" height="60">
                 </div>
@@ -84,7 +84,7 @@
                 </div>
             </li>
 
-            <li class="advantages__item">
+            <li class="advantages__item title-animation-idle">
                 <div class="advantages__pic">
                     <img src="img/advantage-9.svg" alt="" width="60" height="60">
                 </div>
