--- a/src/html/home/banner-bottom.html
+++ b/src/html/home/banner-bottom.html
@@ -1,6 +1,6 @@
 <section class="banner banner--bottom">
     <div class="container">
-        <div class="banner__content">
+        <div class="banner__content title-animation-idle">
             <div class="banner__text">
                 <h2 class="section__title banner__title">Закажите <br> “Онлайн мемориал”</h2>
                 <p class="banner__descr">Оставьте заявку на создание страницы памяти и мы свяжемся с Вами в ближайшее время</p>
