--- a/src/html/home/banner-top.html
+++ b/src/html/home/banner-top.html
@@ -1,21 +1,22 @@
 <section class="banner banner--top">
     <div class="container">
-        <div class="banner__content">
+        <div class="banner__content title-animation-idle">
             <div class="banner__text">
                 <h2 class="section__title banner__title">Остались вопросы?</h2>
                 <p class="banner__descr">Оставьте свои контакты, и мы свяжемся с Вами <br> в ближайшее время</p>
-                <form action="#">
+                <form class="feedback__form" action="#" method="post">
                     <div class="banner__form-wrapper">
                         <div class="form__wrapper">
-                            <label class="form__label" for="your-name">Имя</label>
-                            <input class="form__input" type="text" id="your-name" placeholder="Введите ваше имя" required>
+                            <label class="form__label" for="contacts_name">Имя</label>
+                            <input class="form__input" type="text" id="contacts_name" name="contacts_name" placeholder="Введите ваше имя">
                         </div>
                         <div class="form__wrapper">
-                            <label class="form__label" for="your-phone">Телефон</label>
-                            <input class="form__input" type="text" id="your-phone" placeholder="8 (___) ___-__-__" required>
+                            <label class="form__label" for="contacts_phone">Телефон</label>
+                            <input class="form__input" type="text" id="contacts_phone" name="contacts_phone" placeholder="8 (___) ___-__-__">
                         </div>
                     </div>
                     <button class="btn form__btn banner__btn" type="submit">Отправить</button>
+                    <div class="form__log"></div>
                 </form>
             </div>
             <div class="banner__image">
