--- a/src/html/home/faq.html
+++ b/src/html/home/faq.html
@@ -8,7 +8,7 @@
             <div class="faq__right">
                 <ul class="faq__list">
 
-                    <li class="faq__item">
+                    <li class="faq__item title-animation-idle">
                         <div class="faq__question">
                             <div class="faq__header">Что такое «Интерактивный мемориал»?</div>
                         </div>
@@ -17,7 +17,7 @@
                         </div>
                     </li>
 
-                    <li class="faq__item">
+                    <li class="faq__item title-animation-idle">
                         <div class="faq__question">
                             <div class="faq__header">Зачем нужны подобные страницы памяти?</div>
                         </div>
@@ -25,7 +25,7 @@
                             Чтить память предков, друзей или близких – это долг каждого человека с высокими духовными и моральными качествами
                         </div>
                     </li>
-                    <li class="faq__item">
+                    <li class="faq__item title-animation-idle">
                         <div class="faq__question">
                             <div class="faq__header">Что мне для этого нужно?</div>
                         </div>
@@ -33,7 +33,7 @@
                             Для этого необходимо создать интерактивную страницу памяти, выбрать подходящий тариф и заполнить необходимые данные
                         </div>
                     </li>
-                    <li class="faq__item">
+                    <li class="faq__item title-animation-idle">
                         <div class="faq__question">
                             <div class="faq__header">Зачем нужен QR-код?</div>
                         </div>
@@ -41,7 +41,7 @@
                             Этот код наносится на памятник. С его помощью можно посетить Интерактивный мемориал в любое время
                         </div>
                     </li>
-                    <li class="faq__item">
+                    <li class="faq__item title-animation-idle">
                         <div class="faq__question">
                             <div class="faq__header">Какой пакет порекомендуете к приобретению?</div>
                         </div>
@@ -49,7 +49,7 @@
                             Мы предлагаем два варианта создания интерактивной страницы: «Базовый пакет» и «Premium пакет». Чтобы воспользоваться полным набором услуг, мы рекомендуем выбрать расширенный пакет
                         </div>
                     </li>
-                    <li class="faq__item">
+                    <li class="faq__item title-animation-idle">
                         <div class="faq__question">
                             <div class="faq__header">Сколько хранится страница памяти?</div>
                         </div>
