--- a/src/html/home/price.html
+++ b/src/html/home/price.html
@@ -6,7 +6,7 @@
 
             <ul class="price__list">
 
-                <li class="price__item">
+                <li class="price__item title-animation-idle">
                     <h3 class="price__header">Базовый пакет</h3>
                     <div class="price__image">
                         <img src="img/price-pic-base.jpg" alt="Пример базовой страницы" width="625" height="257">
@@ -28,7 +28,7 @@
                     </div>
                 </li>
 
-                <li class="price__item price__item--prem">
+                <li class="price__item price__item--prem title-animation-idle">
                     <h3 class="price__header">Premium пакет</h3>
                     <div class="price__image">
                         <img src="img/price-pic-prem.jpg" alt="Пример premium страницы" width="625" height="257">
