--- a/src/html/home/ssample.html
+++ b/src/html/home/ssample.html
@@ -1,8 +1,13 @@
 <section class="ssample">
     <div class="container">
         <h2 class="section__title ssample__title"><span>Пример</span> страницы <br> памяти</h2>
-        <div class="ssample__image">
-            <img src="img/ssample-pic.jpg" alt="Пример страницы памяти" width="1280" height="655">
+        <div class="ssample__image title-animation-idle">
+            <picture>
+                <source srcset="img/ssample-pic.webp" type="image/webp">
+                <source srcset="img/ssample-pic.jpg" type="image/jpeg">
+                <img src="img/ssample-pic.jpg" alt="Пример страницы памяти" width="1280" height="655">
+            </picture>
+            <!-- <img src="img/ssample-pic.jpg" alt="Пример страницы памяти" width="1280" height="655"> -->
         </div>
         <div class="ssample__btns">
             <a href="sample-premium.html" class="btn btn-c">Смотреть страницу</a>
