--- a/src/html/modal.html
+++ b/src/html/modal.html
@@ -15,7 +15,7 @@
                         </div>
                         <div class="form__wrapper">
                             <label class="form__label" for="birth-date">Дата рождения</label>
-                            <input class="form__input" type="date" id="birth-date" placeholder="дд.мм.гггг">
+                            <input class="form__input" type="date" id="birth-date">
                         </div>
                         <div class="form__wrapper">
                             <label class="form__label" for="birth-place">Место рождения</label>
@@ -23,7 +23,7 @@
                         </div>
                         <div class="form__wrapper">
                             <label class="form__label" for="die-date">Дата смерти</label>
-                            <input class="form__input" type="date" id="die-date" placeholder="дд.мм.гггг">
+                            <input class="form__input" type="date" id="die-date">
                         </div>
                         <div class="form__wrapper">
                             <label class="form__label" for="die-place">Место смерти</label>
@@ -97,12 +97,12 @@
                         <legend>6. Ваши контактные данные</legend>
                         <p class="form__info">Ваш номер телефона нужен для подтверждения услуги и её оплаты</p>
                         <div class="form__wrapper">
-                            <label class="form__label" for="contacts_name">Имя</label>
-                            <input class="form__input" type="text" id="contacts_name" name="contacts_name" placeholder="Введите ваше имя">
+                            <label class="form__label" for="your_name">Имя</label>
+                            <input class="form__input" type="text" id="your_name" name="your_name" placeholder="Введите ваше имя">
                         </div>
                         <div class="form__wrapper">
-                            <label class="form__label" for="contacts_phone">Телефон</label>
-                            <input class="form__input" type="text" id="contacts_email" name="contacts_phone" placeholder="8 (___) ___-__-__">
+                            <label class="form__label" for="your_phone">Телефон</label>
+                            <input class="form__input" type="text" id="your_phone" name="your_phone" placeholder="8 (___) ___-__-__">
                         </div>
                     </fieldset>
 
