--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -70,7 +70,7 @@
         </div>
 
         <div class="footer__bottom">
-            <div class="footer__copyright">©️ Copyright 2021 Interactive memorial</div>
+            <div class="footer__copyright">&copy; Copyright 2021 Interactive memorial</div>
             <div class="footer__conf"><a href="privacy.html">Политика конфиденциальности</a></div>
         </div>
 
@@ -85,11 +85,11 @@
 
 <!--<link rel="stylesheet" href="css/swiper-bundle.min.css">
 	<script src="js/swiper-bundle.min.js"></script> -->
-<script src="js/scrollreveal.min.js"></script>
+<!-- <script src="js/scrollreveal.min.js"></script> -->
 <!-- <link rel="stylesheet" href="css/glightbox.min.css">
 <script src="js/glightbox.min.js"></script> -->
 
-<script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
+<!-- <script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script> -->
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
+<script src="js/jquery.validate.min.js"></script>
 <script src="js/main.js?v=2"></script>
