--- a/src/html/home/steps.html
+++ b/src/html/home/steps.html
@@ -3,25 +3,25 @@
         <h2 class="section__title steps__title">Как создать <span>онлайн <br> мемориал</span></h2>
 
         <ul class="steps__list">
-            <li class="steps__item">
+            <li class="steps__item title-animation-idle">
                 <div class="steps__pic">
                     <img src="img/steps-1.svg" alt="" width="290" height="300">
                 </div>
                 <h3 class="steps__header">Закажи <br> интерактивный <br> мемориал</h3>
             </li>
-            <li class="steps__item">
+            <li class="steps__item title-animation-idle">
                 <div class="steps__pic">
                     <img src="img/steps-2.svg" alt="" width="290" height="300">
                 </div>
                 <h3 class="steps__header">Создай <br> страницу <br> памяти</h3>
             </li>
-            <li class="steps__item">
+            <li class="steps__item title-animation-idle">
                 <div class="steps__pic">
                     <img src="img/steps-3.svg" alt="" width="290" height="300">
                 </div>
                 <h3 class="steps__header">Установи <br> табличку с <br> QR-кодом</h3>
             </li>
-            <li class="steps__item">
+            <li class="steps__item title-animation-idle">
                 <div class="steps__pic">
                     <img src="img/steps-4.svg" alt="" width="290" height="300">
                 </div>
