site creation done

--- a/src/html/head.html
+++ b/src/html/head.html
@@ -2,41 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Интерактивный мемориал</title>
-    <!-- <meta name="description" content="Интерактивный мемориал"> -->
-    <!-- <meta property="og:title" content="Интерактивный мемориал" />
-	<meta property="og:description" content="Интерактивный мемориал" />
-	<meta property="og:image" content="img/og-img.jpg" /> -->
 
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <!-- <style>
-        body>:not(.pace),
-        body:before,
-        body:after {
-            -webkit-transition: opacity .1s ease-in-out;
-            -moz-transition: opacity .1s ease-in-out;
-            -o-transition: opacity .1s ease-in-out;
-            -ms-transition: opacity .1s ease-in-out;
-            transition: opacity .1s ease-in-out
-        }
-        
-        body:not(.pace-done)>:not(.pace),
-        body:not(.pace-done):before,
-        body:not(.pace-done):after {
-            opacity: 0
-        }
-    </style>
-    <script src="js/pace.min.js"></script>
-    <script>
-        paceOptions = {
-            ajax: false,
-            document: false,
-            eventLag: false,
-            restartOnRequestAfter: false,
-            restartOnPushState: false,
-            elements: false
-        };
-    </script> -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pace-js@latest/pace-theme-default.min.css"> -->
-    <!-- <link rel="stylesheet" href="css/center-circle.css"> -->
+    <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
     <link rel="stylesheet" href="css/styles.css?v=1">
 </head>
