--- a/src/html/home/banner-bottom.html
+++ b/src/html/home/banner-bottom.html
@@ -4,7 +4,7 @@
             <div class="banner__text">
                 <h2 class="section__title banner__title">Закажите <br> “Онлайн мемориал”</h2>
                 <p class="banner__descr">Оставьте заявку на создание страницы памяти и мы свяжемся с Вами в ближайшее время</p>
-                <a href="#" class="btn form__btn banner__btn">Заказать</a>
+                <a data-micromodal-trigger="request-full-form" data-tarif="prem" href="javascript:;" class="btn form__btn banner__btn">Заказать</a>
             </div>
             <div class="banner__image">
                 <img class="banner__image--desk" src="img/banner-qr.png" alt="">
