--- a/src/html/home/price.html
+++ b/src/html/home/price.html
@@ -23,7 +23,7 @@
                         </ul>
                     </div>
                     <div class="price__bottom">
-                        <a href="#" class="btn btn-c price__btn">Заказать страницу</a>
+                        <a data-micromodal-trigger="request-full-form" data-tarif="base" href="javascript:;" class="btn btn-c price__btn">Заказать страницу</a>
                         <div class="price__cost">3 500 ₽</div>
                     </div>
                 </li>
@@ -45,7 +45,7 @@
                         </ul>
                     </div>
                     <div class="price__bottom">
-                        <a href="#" class="btn price__btn">Заказать страницу</a>
+                        <a data-micromodal-trigger="request-full-form" href="javascript:;" class="btn price__btn">Заказать страницу</a>
                         <div class="price__cost">5 000 ₽</div>
                     </div>
                 </li>
