--- a/src/html/home/steps.html
+++ b/src/html/home/steps.html
@@ -30,7 +30,7 @@
         </ul>
 
         <div class="steps__btns">
-            <a href="#" class="btn">Заказать онлайн мемориал</a>
+            <a data-micromodal-trigger="request-full-form" href="javascript:;" class="btn">Заказать онлайн мемориал</a>
         </div>
     </div>
 </section>
