--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
                     <li><a href="price.html">Цена</a></li>
                     <li><a href="error404.html">404</a></li>
                     <li><a href="privacy.html">Политика конфиденциальности</a></li>
-                    <!-- <li><a href="ui-kit.html">UI KIT</a></li> -->
+                    <li><a href="ui-kit.html">UI KIT</a></li>
                 </ul>
             </div>
         </section>
