--- a/src/ui-kit.html
+++ b/src/ui-kit.html
@@ -5,7 +5,7 @@
 //= html/head.html
 <!-- end head -->
 
-<body class="home">
+<body>
 
     <!-- header -->
     //= html/header.html
@@ -13,9 +13,13 @@
 
     <main>
 
-        <section style="min-height: 100vh; padding: 50px 0;">
+        <section style="min-height: 100vh; padding: 50px 0; font-size: 20px; background-color: #e1e1e1;">
             <div class="container">
+
                 <a href="#" class="btn">Кнопка</a>
+                <a href="#" class="btn btn-o">Кнопка</a>
+                <a href="#" class="btn btn-c">Кнопка</a>
+
             </div>
         </section>
 
