--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -85,11 +85,16 @@
 
 <!--<link rel="stylesheet" href="css/swiper-bundle.min.css">
 	<script src="js/swiper-bundle.min.js"></script> -->
-<!-- <script src="js/scrollreveal.min.js"></script> -->
-<!-- <link rel="stylesheet" href="css/glightbox.min.css">
-<script src="js/glightbox.min.js"></script> -->
-
-<!-- <script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script> -->
+<link rel="stylesheet" href="css/glightbox.min.css">
+<script src="js/glightbox.min.js"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script>
+<script src='js/jquery-ui.min.js'></script>
 <script src="js/jquery.validate.min.js"></script>
+<script src="js/jquery.fileinput.min.js"></script>
+
+<link rel="stylesheet" href="css/fotorama.css">
+<script src="js/fotorama.min.js"></script>
+
+<!-- <script src="js/masonry.pkgd.min.js"></script> -->
 <script src="js/main.js?v=2"></script>
