--- a/src/html/home/hero.html
+++ b/src/html/home/hero.html
@@ -10,7 +10,7 @@
                 <h1 class="hero__title">Создайте <span>страницу <br> памяти</span></h1>
                 <p class="hero__info">Сохраните память о родных и любимых, пронесите ее сквозь года и передайте следующим поколениям</p>
                 <div class="hero__btns">
-                    <a data-micromodal-trigger="modal-request" href="javascript:;" class="btn">Заказать страницу</a>
+                    <a data-micromodal-trigger="request-full-form" href="javascript:;" class="btn">Заказать страницу</a>
                     <a href="sample-premium.html" class="btn btn-o">Смотреть пример</a>
                 </div>
             </div>
