make file text changing

--- a/src/html/modal.html
+++ b/src/html/modal.html
@@ -166,7 +166,7 @@
 
                     <fieldset>
                         <legend>5. Файлы</legend>
-                        <p class="form__info">Прикрепите все фото, видео и аудио материалы, которые вы бы хотели видеть на “Странице памяти” вашего близкого человека. Укажите фото для обложки</p>
+                        <p class="form__info form__info--file">Прикрепите все фото, видео и аудио материалы, которые вы бы хотели видеть на “Странице памяти” вашего близкого человека. Укажите фото для обложки</p>
                         <div class="form__wrapper">
                             <div class="form__wrapper-label">
                                 <input class="form__input" type="file" id="files" name="files" multiple>
